tdf#103264 Missing case for SID_SAVE_BACKGROUND

Regression of:

commit 93b4bf647a5899f54ef51f8b4bfed0faa66b466e
Date:   Fri Jul 31 02:28:28 2015 +0530

    tdf#89466: Slide Background tab

Change-Id: I1c6d1d35c47e6e4400d65474c84b2c3ebeb0330f
(cherry picked from commit 4a74c8af0b4573b4b72ccf04b26c71e41799e7a0)
Reviewed-on: https://gerrit.libreoffice.org/30051
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Miklos Vajna <vmiklos@collabora.co.uk>