sd/source/ui/view/drviews2.cxx
@@ -1217,6 +1217,7 @@ void DrawViewShell::FuTemporary(SfxRequest& rReq)
         break;
 
         case SID_SELECT_BACKGROUND:
+        case SID_SAVE_BACKGROUND:
         case SID_ATTR_PAGE_SIZE:
         case SID_ATTR_PAGE:
         case SID_PAGESETUP:  // BASIC ??
